[Luisa][chore] Adds serial annotation to serialVersionUid fields and fixes sonar issues